--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -8,10 +8,11 @@
     "strict": true,
     "noImplicitOverride": true,
     "noPropertyAccessFromIndexSignature": true,
-    "noImplicitReturns": true,
+    "noImplicitReturns": false,
     "noFallthroughCasesInSwitch": true,
     "sourceMap": true,
     "declaration": false,
+    "strictPropertyInitialization": false,
     "downlevelIteration": true,
     "experimentalDecorators": true,
     "moduleResolution": "node",
@@ -20,6 +21,7 @@
     "module": "es2020",
     "lib": [
       "es2020",
+      "es2019",
       "dom"
     ]
   },
